Add Copyright Notice

--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <!--Parked Calls-->
     <string name="navigation_parked_calls">Parked</string>
     <string name="title_parked_calls">Parked Calls</string>
+    <string name="copyright">Copyright © 2024 Nathan Schmitt</string>
 </resources>
